# tspp_calc

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
include/: Calculator.hpp  Exceptions.hpp  MatrixGeneric.hpp  MatrixOperation.hpp
src/: Calculator.cpp  main.cpp
test/: main.cpp  test_basic.cpp  test_funcs.cpp  test_ops.cpp  test_util.cpp
test/test_suite/: badAdd.txt  badPow.txt  notCompleteMatrix.txt  valid.txt  wrongOp.txt
